# greentic-qa

./: .gitignore  Cargo.toml  GitVersion.yml  README.md  SECURITY_FIX_REPORT.md  component.manifest.json  pr-changed-files.txt  pr-comment.md
.codex/: PR-01-qa-lib.md
.codex/done/: PR-QA-01-frontends-delegation-i18n.md  README_FIRST.md
.github/: renovate.json
.github/workflows/: ci.yml  codex-security-fix.yml  codex-semver-fix.yml  component-qa.yml  crates-publish.yml  dependabot-automerge.yml  dev-publish.yml  nightly-e2e.yml  nightly-semver.yml  publish-dev-codeartifact.yml  publish.yml  renovate.yml
ci/: local_check.sh  wave-clean-marker.txt
crates/component-qa/: Cargo.toml  README.md  component.manifest.json
crates/component-qa/assets/i18n/: en.json
crates/component-qa/src/: lib.rs  qa.rs
crates/component-qa/tests/: conformance.rs  qa_asset_loading.rs
crates/qa-cli/: Cargo.toml
crates/qa-cli/src/: main.rs
crates/qa-lib/: Cargo.toml
crates/qa-lib/src/: lib.rs
crates/qa-lib/tests/: i18n_wizard.rs  regression_repeated_need_input.rs
crates/qa-spec/: Cargo.toml
crates/qa-spec/src/spec/: form.rs
crates/qa-spec/tests/: progress.rs
e2e/component-qa/: README.md  answers.json  questions.form.json
